2009-06-11   D. V. Wiebe <getdata@ketiltrout.net>  svn:291
	* test/alter_polynom_coeff.c test/get_polynom_noin.c
	test/parse_polynom_scalar.c test/put_polynom1.c test/alter_polynom_input.c
	test/put_polynom2.c test/madd_polynom.c test/entry_polynom_scalar.c
	test/parse_polynom_ncols1.c test/parse_polynom.c test/add_polynom.c
	test/spf_polynom.c test/parse_polynom_ncols2.c test/put_polynom_noin.c
	test/alter_polynom_ord.c test/get_polynom.c test/entry_polynom.c: Added.

	* src/getdata.c (_GD_DoField): Fix call to _GD_DoPolynom.

	* src/parse.c (_GD_ParsePolynom): Fix off-by-one error.

	* src/mod.c (_GD_Change): Handle poly_ord = 0 properly.
	* src/mod.c (dirfile_alter_polynom): Fix off-by-one error.

	* src/getdata.h.in: Declare polynom API.

	* src/add.c (_GD_Add): Only copy the first polynom in_field.

2009-06-09   D. V. Wiebe <getdata@ketiltrout.net>  svn:290
	* src/internal.h: Add GD_E_BAD_ENTRY_POLYORD.
	* src/getdata.h.in: Define GD_MAX_POLYNOM and GD_POLYNOM_ENTRY.  Increment
	GD_N_ENTYPES.  Add POLYNOM struct to the entry struct.

	* src/entry.c (_GD_FreeE _GD_CalculateEntry get_entry): Add case for
	GD_POLYNOM_ENTRY.
	* src/getdata.c (_GD_DoField): Add case for GD_POLYNOM_ENTRY.
	* src/flush.c (_GD_Flush _GD_FieldSpec): Add case for GD_POLYNOM_ENTRY.
	* src/nfields.c (get_nfields_by_type): Add case for GD_POLYNOM_ENTRY.
	* src/spf.c (_GD_GetSPF): Add case for GD_POLYNOM_ENTRY.
	* src/putdata.c (_GD_DoFieldOut): Add case for GD_POLYNOM_ENTRY.
	* src/del.c (_GD_ClearDerived _GD_DeReference): Add case for GD_POLYNOM_ENTRY.
	* src/mod.c (_GD_Change): Add case for GD_POLYNOM_ENTRY.
	* src/add.c (_GD_Add): Add case for GD_POLYNOM_ENTRY.

	* src/getdata.c (_GD_PolynomData _GD_DoPolynom): Added.
	* src/putdata.c (_GD_DoPolynomOut): Added.
	* src/parse.c (_GD_ParsePolynom): Added.
	* src/mod.c (dirfile_alter_polynom): Added.
	* src/add.c (dirfile_add_polynom dirfile_madd_polynom): Added.

	* src/entry.c (_GD_FreeE): GD_MAX_LINCOM -> GD_MAX_POLYNOM in limits.